--- a/model_4.html
+++ b/model_4.html
@@ -204,29 +204,29 @@ body {
 <br><br>
 
 
-<h2> Select Options </h2>
+<h2>  Custom Options </h2>
 <form>
-	<h4>Color Choice:
+	<h4>Exterior Color:
 	  <select name="colorChoice"  style="height:30px; width: 150px; font-size:12pt;">
 		<option value="silver">Silver Metallic</option>
-		<option value="blue">Dark Black</option>
-		<option value="blue">Perl White</option>
-		<option value="blue">Grey</option>
-		<option value="red">Red</option>
+		<option value="red">Red Pearl Metallic</option>
 		<option value="blue">Blue Metallic</option>
+		<option value="blue">Dark Black</option>
+		<option value="blue">Pearl White</option>
 		<option value="green">Dark Green</option>
+		<option value="blue">Grey</option>
 	  </select>
 	</h4>
 
     <h4>Drivetrain Type:
-	  <select name="driveType"  style="height:30px; width: 150px; font-size:12pt;">
-		<option value="awd">All Wheel Drive (20" Performsnce Wheels)</option>
+	  <select name="driveType"  style="height:30px; width: 350px; font-size:12pt;">
+		<option value="awd">All Wheel Drive (20" Performance Wheels)</option>
 		<option value="awd">All Wheel Drive (19" Sports Wheels)</option>
 		<option value="rwd">Rear Wheel Drive (18" Aero Wheels)</option>
 	  </select>
   </h4>
 
-  <h4>Interior Type:
+  <h4>Interior Leather:
 	  <select name="wheelType"  style="height:30px; width: 150px; font-size:12pt;">
 		<option value="interiorBlack">All Black</option>
 		<option value="interiorBlend">Black and White </option>
