--- a/model_4.html
+++ b/model_4.html
@@ -199,7 +199,7 @@ body {
 <h4> 200 miles </h4>
 <h2> Acceleration </h2>
 <h4> 0-60 mph in less than 6 seconds </h4>
-<h2> Purchase Price </h2>
+<h2> Base Purchase Price </h2>
 <h4> $65000 (extra options could vary price)</h2>
 <br><br>
 
@@ -234,14 +234,27 @@ body {
 		<option value="interiorBlend">Black and Grey </option>
 	  </select>
   </h4>
+  <h4>Purchase Options:
+	  <select name="purchasePlan"  style="height:30px; width: 250px; font-size:12pt;">
+		<option value="purchase">Pay Full Purchase Price</option>
+		<option value="loan">Pay Monthly Loan Amount (5yrs at 3.5% APY, down: $10000) </option>
+		<option value="lease">Pay Monthly Lease Amount (3yrs at 4.99% APY, down:$6000, 10K miles/year)  </option>
+	  </select>
+  </h4>
 
 </form>	
 
-<center>	
-<div  class="button">
-    <a href="order_form.html?type=purchase&price=75000">Order Now!</a>
-</div>
-</center>
+<h2> Final Purchase Details </h2>
+    <center>
+		<button id="agree_button" type="button" onclick="UpdatePricePlanDetails()" style=" font-size:14pt; width:525px; height:60px; padding-left:25px; padding-right:25px; display: block; margin:10px;"> Click for Updated Pricing Details! </button>
+		<br>
+		<div id="div_checkout_button">
+		</div>
+		<div  class="button">
+			<a href="order_form.html?type=purchase&price=75000">Checkout</a>
+		</div>
+    </center>
+
 	
 <br>
 <a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="east.html">GO TO OUR SCHOOL PAGE</a>	
