--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-
 <!DOCTYPE html>
 <html>
 
 <head>
-<title>Ampere</title>	
+<title>Ampere</title>
 <link rel="icon" type="image/ico" href="favicon.ico" />
 <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 /* Style the header: https://designshack.net/articles/css/the-10-best-script-and-handwritten-google-web-fonts/   */
 .header {
@@ -51,6 +50,99 @@
   background-color: GoldenRod ;
   color: #38047B;
 }
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
 @media only screen and (max-width: 720px) {
 h2 {
   font: 100 30px 'Berkshire Swash', Helvetica, sans-serif;
@@ -59,15 +151,15 @@ h2 {
   margin-top: 25px;
   margin-bottom: 25px;
   padding-top: 10px;
-  padding-bottom: 5px;	
+  padding-bottom: 5px;
 
  }
 h4 {
   font: 100 25px 'Montserrat', sans-serif;
   text-align: left;
-  font-size: 25px; 
-  color: #ffbcd9; 
-  margin-left: 50px; margin-right: 50px; 
+  font-size: 25px;
+  color: #ffbcd9;
+  margin-left: 50px; margin-right: 50px;
   margin-bottom: 10px; margin-top: 10px;
   font-family: 'Montserrat', sans-serif;
  }
@@ -76,9 +168,13 @@ h6 {
   text-align: center;
   font-size: 15px;
   color: #E72F71;
-  margin-top:50px; margin-bottom:20px; 
+  margin-top:50px; margin-bottom:20px;
   font-family: 'Montserrat', sans-serif;
  }
+ /* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
 }
 @media only screen and (min-width: 720px) {
 h2 {
@@ -88,7 +184,7 @@ h2 {
   margin-top: 20px;
   margin-bottom: 20px;
   padding-top: 10px;
-  padding-bottom: 5px;	
+  padding-bottom: 5px;
  }
 h4 {
   font: 100 25px 'Montserrat', sans-serif;
@@ -112,20 +208,20 @@ h6 {
 body {
   background-image: url('images/new_background.jpg');
   background-repeat: no-repeat;
-  background-attachment: fixed;  
+  background-attachment: fixed;
   background-size: cover;
 }
 }
 </style>
 </head>
-	
+
 <body>
 
-<div class="header"> 
+<div class="header">
 	<img src="images/ampere_logo.png"
 	 alt="Ampere Logo" align= "top"
 	 style="float:left; margin-bottom:20px; height: 200px; width: 150px; object-fit: contain;"
-> 
+>
 <h1> <b> Welcome to Ampere! </b> </h1>
 </div>
 
@@ -142,22 +238,85 @@ body {
   </center>
 </div>
 
+<div class="slideshow-container">
 
-<center>
- <img src="images/Owl.jpg" style="max-width: 150%; max-height: 75%; padding-right: 25px; display: block; margin:auto" >
-</center>
-	
+<div class="mySlides fade">
+  <div class="numbertext">1 / 4</div>
+  <img src="renault-car.jpg" style="width:100%">
+  <div class="text">Caption Text</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">2 / 4</div>
+  <img src="porsche_taycan.jpg" style="width:100%">
+  <div class="text">Caption Two</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">3 / 4</div>
+  <img src="Lotus.jpg" style="width:100%">
+  <div class="text">Caption Three</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">4 / 4</div>
+  <img src="TitleCar.jpg" style="width:100%">
+  <div class="text">Caption Four</div>
+</div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+  <span class="dot" onclick="currentSlide(4)"></span>
+</div>
+
+<script>
+var slideIndex = 1;
+showSlides(slideIndex);
+
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  var i;
+  var slides = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";
+  }
+  for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";
+  dots[slideIndex-1].className += " active";
+}
+</script>
+
 <h2> Our Goal: </h2>
 <h4> We want to create efficient cars that don’t use up fossil fuels, help reduce global warming so we can save the planet, and use part of the money to further our cause. </h4>
 
 <h2> Company History </h2>
 <h4> Our company was founded on September 7, 2003, by Jayden Whitney, Dave Busby, Aleesha Ryan, and Braxton Stevens. </h4>
 
-	
+
 <br>
-<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="east.html">GO TO OUR SCHOOL PAGE</a>	
-<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #C891FF;  margin-right: 50px" href="tsa.html">GO TO FIND INFORMATION ON OUR TSA CHAPTER </a>	
-	
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="east.html">GO TO OUR SCHOOL PAGE</a>
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #C891FF;  margin-right: 50px" href="tsa.html">GO TO FIND INFORMATION ON OUR TSA CHAPTER </a>
+
 <br>
 
  <center>
@@ -165,7 +324,3 @@ body {
  </center>
 
 </body>
-
- 
-    
-    
