--- a/model_4.html
+++ b/model_4.html
@@ -150,6 +150,50 @@ body {
 }
 }
 </style>
+<script>
+var bOrderButtonCreated= false;
+function UpdatePricePlanDetails()
+{
+    if (bOrderButtonCreated)
+		return;
+    bOrderButtonCreated = true;
+    var type = 'purchase';
+    var price = 75000;
+	var loanMonths = 60
+	var leaseMonths = 36
+	var milesPerYear = 10000;
+    var totalPrice = price;
+
+	var e = document.getElementById("purchasePlan");
+	var purchaseType = e.options[e.selectedIndex].value;
+	var text = e.options[e.selectedIndex].text;
+
+	var checkoutURL = "order_form.html?type=" + purchaseType;
+
+	if (purchaseType.toUpperCase() == "PURCHASE") {
+		price = totalPrice;
+		checkoutURL = checkoutURL + "&price=" + price;
+	}
+	else if (purchaseType.toUpperCase() == "LOAN") {
+		var downpayment = Math.round(20.0/100.0*totalPrice);
+		var interest = (totalPrice-downpayment)*2.99/100
+		price = Math.round((totalPrice+interest-downpayment)/60);
+		checkoutURL = checkoutURL  + "&price=" +  price + "&downpayment=" + downpayment + "&term="+loanMonths;
+	}
+	else if (purchaseType.toUpperCase() == "LEASE") {
+		var downpayment = Math.round(10.0/100.0*totalPrice);
+		var interest = (totalPrice-downpayment)*4.99/100
+		price = Math.round((totalPrice*0.5+interest-downpayment)/36);
+		checkoutURL = checkoutURL  + "&price=" +  price + "&downpayment=" + downpayment  + "&term="+leaseMonths + "&miles=" + milesPerYear;
+	}
+	alert(checkoutURL)
+    document.querySelector('#div_add_checkout_button').insertAdjacentHTML('afterbegin',
+        '<div class="button">\
+		<a href=' + checkoutURL +'>Check Out</a>\
+		</div>')
+}
+</script>
+
 </head>
 	
 <body>
@@ -206,60 +250,55 @@ body {
 
 <h2>  Custom Options </h2>
 <form>
-	<h4>Exterior Color:
-	  <select name="colorChoice"  style="height:30px; width: 150px; font-size:12pt;">
-		<option value="silver">Silver Metallic</option>
-		<option value="red">Red Pearl Metallic</option>
-		<option value="blue">Blue Metallic</option>
-		<option value="blue">Dark Black</option>
-		<option value="blue">Pearl White</option>
-		<option value="green">Dark Green</option>
-		<option value="blue">Grey</option>
-	  </select>
-	</h4>
+   <h4>Exterior Color:
+  <select name="colorChoice"  style="height:30px; width: 150px; font-size:12pt;">
+	<option value="silver">Silver Metallic</option>
+	<option value="red">Red Metallic</option>
+	<option value="blue">Blue Metallic</option>
+	<option value="green">Dark Green</option>
+	<option value="blue">Pearl White</option>
+	<option value="grey">Grey</option>
+	<option value="black">Black</option>
+  </select>
+    </h4>
 
     <h4>Drivetrain Type:
-	  <select name="driveType"  style="height:30px; width: 350px; font-size:12pt;">
-		<option value="awd">All Wheel Drive (20" Performance Wheels)</option>
-		<option value="awd">All Wheel Drive (19" Sports Wheels)</option>
-		<option value="rwd">Rear Wheel Drive (18" Aero Wheels)</option>
-	  </select>
+  <select name="driveType"  style="height:30px; width: 350px; font-size:12pt;">
+	<option value="awd">All Wheel Drive (20" Performance Wheels)</option>
+	<option value="awd">All Wheel Drive (19" Sports Wheels)</option>
+	<option value="rwd">Rear Wheel Drive (18" Aero Wheels)</option>
+  </select>
   </h4>
 
   <h4>Interior Leather:
-	  <select name="wheelType"  style="height:30px; width: 150px; font-size:12pt;">
-		<option value="interiorBlack">All Black</option>
-		<option value="interiorBlend">Black and White </option>
-		<option value="interiorBlend">Black and Red </option>
-		<option value="interiorBlend">Black and Grey </option>
-	  </select>
+  <select name="wheelType"  style="height:30px; width: 150px; font-size:12pt;">
+	<option value="interiorBlack">All Black</option>
+	<option value="interiorBlend">Black and White </option>
+	<option value="interiorBlend">Black and Red </option>
+	<option value="interiorBlend">Black and Grey </option>
+  </select>
   </h4>
   <h4>Purchase Options:
-	  <select name="purchasePlan"  style="height:30px; width: 250px; font-size:12pt;">
-		<option value="purchase">Pay Full Purchase Price</option>
-		<option value="loan">Pay Monthly Loan Amount (5yrs at 3.5% APY, down: $10000) </option>
-		<option value="lease">Pay Monthly Lease Amount (3yrs at 4.99% APY, down:$6000, 10K miles/year)  </option>
-	  </select>
+  <select id="purchasePlan"  style="height:30px; width: 250px; font-size:12pt;">
+	<option value="purchase">Pay Full Purchase Price</option>
+	<option value="loan">Pay Monthly Loan Amount (5yrs at 3.5% APY, down: $10000) </option>
+	<option value="lease">Pay Monthly Lease Amount (3yrs at 4.99% APY, down:$6000, 10K miles/year)  </option>
+  </select>
   </h4>
 
 </form>	
 
 <h2> Final Purchase Details </h2>
     <center>
-		<button id="agree_button" type="button" onclick="UpdatePricePlanDetails()" style=" font-size:14pt; width:525px; height:60px; padding-left:25px; padding-right:25px; display: block; margin:10px;"> Click for Updated Pricing Details! </button>
-		<br>
-		<div id="div_checkout_button">
-		</div>
-		<div  class="button">
-			<a href="order_form.html?type=purchase&price=75000">Checkout</a>
-		</div>
+	<button id="agree_button" type="button" onclick="UpdatePricePlanDetails()" style=" font-size:14pt; width:525px; height:60px; padding-left:25px; padding-right:25px; display: block; margin:10px;"> Click for Updated Pricing Details! </button>
+	<br>
+	<div id="div_add_checkout_button">
+	</div>
     </center>
-
 	
 <br>
-<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="east.html">GO TO OUR SCHOOL PAGE</a>	
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="east.html">GO TO OUR SCHOOL PAGE</a>
 <a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #C891FF;  margin-right: 50px" href="tsa.html">GO TO FIND INFORMATION ON OUR TSA CHAPTER </a>	
-	
 <br>
 
  <center>
