--- a/model_1.html
+++ b/model_1.html
@@ -51,6 +51,22 @@
   background-color: GoldenRod ;
   color: #38047B;
 }
+.button {
+font: 100 24px 'Montserrat', sans-serif;
+  background-color: #0CE4D7;
+  border: none;
+  color: black;
+  padding: 15px 15px;
+  text-align: center;
+  font-size: 35px;
+  cursor: pointer;
+  clear: both;
+  display: table;
+}
+
+.button:hover {
+  background-color: teal;
+}
 @media only screen and (max-width: 720px) {
 h2 {
   font: 100 30px 'Berkshire Swash', Helvetica, sans-serif;
@@ -60,11 +76,10 @@ h2 {
   margin-bottom: 25px;
   padding-top: 10px;
   padding-bottom: 5px;	
-
  }
 h4 {
   font: 100 25px 'Montserrat', sans-serif;
-  text-align: justify;
+  text-align: left;
   font-size: 25px; 
   color: #ffbcd9; 
   margin-left: 50px; margin-right: 50px; 
@@ -92,7 +107,7 @@ h2 {
  }
 h4 {
   font: 100 25px 'Montserrat', sans-serif;
-  text-align: justify;
+  text-align: left;
   font-size: 25px;
   color: #ffbcd9;
   width: 85%;
@@ -117,6 +132,61 @@ body {
 }
 }
 </style>
+<script>
+var bOrderButtonCreated= false;
+function UpdatePricePlanDetails()
+{
+    var type = 'purchase';
+    var price = 105000;
+    var loanMonths = 60;
+    var leaseMonths = 36;
+    var milesPerYear = 10000;
+    var totalPrice = price;
+	var purchaseInfoFound = true;
+
+    var e = document.getElementById("purchasePlan");
+    var purchaseType = e.options[e.selectedIndex].value;
+    var textDescription = e.options[e.selectedIndex].text;
+    var checkoutURL = "order_form.html?type=" + purchaseType;
+	if (purchaseType.toUpperCase() == "PURCHASE") {
+		price = totalPrice;
+		checkoutURL = checkoutURL + "&price=" + price;
+		document.getElementById("purchasePlanDetails").textContent = "Total Purchase Price: $" + price;
+	} else if (purchaseType.toUpperCase() == "LOAN") {
+		var downpayment = Math.round(20.0/100.0*totalPrice);
+		var interestPeriodic = 3.0/100.0/loanMonths;
+		var discountFactor = (Math.pow((1 + interestPeriodic),loanMonths) - 1) / (interestPeriodic*Math.pow((1 + interestPeriodic),loanMonths));
+		if (discountFactor <= 0) {
+		    alert('Please contact us for payment details');
+			discountFactor = 1
+		}
+		price = Math.round((totalPrice-downpayment)/discountFactor);
+		checkoutURL = checkoutURL  + "&price=" +  price + "&downpayment:" + downpayment + "&term:" + loanMonths;
+        document.getElementById("purchasePlanDetails").textContent = "Monthly Loan Payment: $" + price + " (down payment: $" + downpayment + ", term: " + loanMonths + " months)";
+	} else if (purchaseType.toUpperCase() == "LEASE") {
+		var downpayment = Math.round(10.0/100.0*totalPrice);
+		var residualValue = Math.round(55.0/100.0*totalPrice*15.0/100.0); // sticker price is 15% more than sale price
+		price = Math.round((totalPrice-downpayment-residualValue)/leaseMonths);
+		checkoutURL = checkoutURL  + "&price=" +  price + "&downpayment=" + downpayment  + "&term=" + leaseMonths + "&miles=" + milesPerYear;
+        document.getElementById("purchasePlanDetails").textContent = "Monthly Lease Payment: $" + price + " (down payment: $" + downpayment + ", term: " + leaseMonths + " months, includes: " + milesPerYear + " miles/year";
+	} else {
+      purchaseInfoFound = false;
+      document.getElementById("purchasePlanDetails").textContent = "Payment Details Not Available. Please Contact us to Place Order.";
+    }
+	//Remove previously added child button to recreate with updated checkoutURL
+	if (bOrderButtonCreated) {
+	    var checkoutDivElm = document.getElementById("div_add_checkout_button");
+		checkoutDivElm.removeChild(checkoutDivElm.firstChild);
+	}
+	//Create Check Out button to take to the customer to online order form
+	document.querySelector('#div_add_checkout_button').insertAdjacentHTML('afterbegin',
+               '<div class="button">\
+		            <a href=' + checkoutURL +'>Check Out</a>\
+		        </div>');
+	bOrderButtonCreated = true;
+}
+</script>
+
 </head>
 	
 <body>
@@ -146,22 +216,81 @@ body {
  <img src="images/renault-car.jpg" style="max-width: 200%; max-height: 100%; padding-right: 25px; display: block; margin:auto" >
 </center>
 	
-
-<h2> Specs </h2>
-<h4> Fuel: Options: Dashboard, Built In GPS </h4>
-
-<br>
-<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="east.html">GO TO OUR SCHOOL PAGE</a>	
-<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #C891FF;  margin-right: 50px" href="tsa.html">GO TO FIND INFORMATION ON OUR TSA CHAPTER </a>	
+<center>	
+	 <h2> Vehicle Specifications </h2>
+</center>
 	
-<br>	
-		
+<h2> Default Interior Options </h2>	
+<h4> Seating Capacity: 2 Adults </h4>
+<h4> Front adjustable seats</h4>
+<h4> 4 USB ports  </h4>
+<h4> Bluetooth connection </h4>	
+
+<h2> Battery Type </h2>
+<h4> 100 kWh Lithium-Ion Battery </h4>
+<h2> Wheel Rims </h2>
+<h4> Alloy Wheels to offer best for performance.</h2>
+<h2> Top Speed </h2>
+<h4> 220 mph </h4>
+<h2> Range </h2>
+<h4> 200 miles </h4>
+<h2> Acceleration </h2>
+<h4> 0-60 mph in less than 4.5 seconds </h4>
+<h2> Base Purchase Price </h2>
+<h4> $105000 (extra options could vary price)</h2>
+<br><br>
+
+<h2>  Custom Options </h2>
+<form>
+  <h4>Exterior Color:
+  <select name="colorChoice"  style="height:30px; width: 150px; font-size:12pt;">
+	<option value="silver">Silver Metallic</option>
+	<option value="red">Red Metallic</option>
+	<option value="blue">Blue Metallic</option>
+  </select>
+  </h4>
+
+  <h4>Drivetrain Type:
+  <select name="driveType"  style="height:30px; width: 350px; font-size:12pt;">
+	<option value="awd">All Wheel Drive (20" Performance Wheels)</option>
+	<option value="awd">All Wheel Drive (19" Sports Wheels)</option>
+  </select>
+  </h4>
+
+  <h4>Interior Leather:
+  <select name="wheelType"  style="height:30px; width: 150px; font-size:12pt;">
+	<option value="interiorBlack">All Black</option>
+	<option value="interiorBlend">Black and Red </option>
+	<option value="interiorBlend">Black and Grey </option>
+  </select>
+  </h4>
+  <h4>Purchase Options:
+  <select id="purchasePlan"  style="height:30px; width: 250px; font-size:12pt;">
+	<option value="purchase">Pay Full Purchase Price</option>
+	<option value="loan">Pay Monthly Loan Amount (60months at 3.5% APY, downpayment: 20%) </option>
+	<option value="lease">Pay Monthly Lease Amount (36months, downpayment:10%, 10K miles/year)  </option>
+  </select>
+  </h4>
+
+</form>	
+
+<h2> Final Purchase Details </h2>
+   <center>
+	<button id="agree_button" type="button" onclick="UpdatePricePlanDetails()" style=" font-size:14pt; width:300px; height:60px; display: block; margin:10px;"> Click to See Updated Purchase Details </button>
+	<br>
+    <div id="purchasePlanDetails" style="font-size:14pt; font-weight:bold"></div>
+	<br>
+	<div id="div_add_checkout_button"></div>
+   </center>
+	
+<br>
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="east.html">GO TO OUR SCHOOL PAGE</a>
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #C891FF;  margin-right: 50px" href="tsa.html">GO TO FIND INFORMATION ON OUR TSA CHAPTER </a>	
+<br>
+
  <center>
     <h6> Copyright © 2020 https://ampereoutlet.github.io/ </h6>
  </center>
 
 </body>
 </html>
- 
-    
-    
