--- a/tsa_contacts.html
+++ b/tsa_contacts.html
@@ -3,7 +3,7 @@
 
 <head>
 <title> Our TSA Chapter </title>
-<link rel="icon" type="image/ico" href="favicon.ico" />
+<link rel="icon" type="image/ico" href="favicon.ico?v=1.0" />
 <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
@@ -172,3 +172,4 @@ body {
  </center>
 
 </body>
+</html>
