--- a/model_3.html
+++ b/model_3.html
@@ -150,16 +150,25 @@ function UpdatePricePlanDetails()
 	var driveType = e.options[e.selectedIndex].value;
 	e = document.getElementById("interiorLeather");
 	var interiorLeather = e.options[e.selectedIndex].value;
+	//color options
     if (colorChoice == "red")
 		totalPrice += 500
 	else if (colorChoice == "blue")
 		totalPrice += 250
+	else if (colorChoice == "silver")
+		totalPrice += 100
+	//driveTran options
     if (driveType == "awd20")
 		totalPrice += 1000    
+    else if (driveType == "awd19")
+		totalPrice += 500
+	//interior choice
     if (interiorLeather == "interiorBlendedRed")
 		totalPrice += 500
-	else if (interiorLeather == "interiorBlendGrey")
+	else if (interiorLeather == "interiorBlendedGrey")
 		totalPrice += 250
+	else if (interiorLeather == "interiorBlendedWhite")
+		totalPrice += 100
 
 	e = document.getElementById("purchasePlan");
     purchaseType = e.options[e.selectedIndex].value;
@@ -262,23 +271,23 @@ function UpdatePricePlanDetails()
   <h4>Exterior Color:
   <select id="colorChoice"  style="height:30px; width: 150px; font-size:12pt;">
 	<option value="silver">Silver Metallic</option>
-	<option value="blue">Blue Metallic (+250)</option>
-	<option value="red">Red Metallic(+500)</option>
+	<option value="blue">Blue Metallic (+$250)</option>
+	<option value="red">Red Metallic(+$500)</option>
   </select>
   </h4>
 
   <h4>Drivetrain Type:
   <select id="driveType"  style="height:30px; width: 350px; font-size:12pt;">
 	<option value="awd19">All Wheel Drive (19" Sports Wheels)</option>
-	<option value="awd20">All Wheel Drive (20" Performance Wheels) (+1000)</option>
+	<option value="awd20">All Wheel Drive (20" Performance Wheels) (+$1000)</option>
   </select>
   </h4>
 
   <h4>Interior Leather:
   <select id="interiorLeather"  style="height:30px; width: 150px; font-size:12pt;">
 	<option value="interiorBlack">All Black</option>
-	<option value="interiorBlendGrey">Black and Grey (+250)</option>
-	<option value="interiorBlendedRed">Black and Red (+500)</option>
+	<option value="interiorBlendedGrey">Black and Grey (+$250)</option>
+	<option value="interiorBlendedRed">Black and Red (+$500)</option>
   </select>
   </h4>
   <h4>Purchase Options:
